# b2w_controllers

./: CMakeLists.txt  package.xml
include/b2w_controllers/: b2w_controllers.hpp
src/: b2w_controllers.cpp
src/policy/: gg.onnx  new_onnx.py  policy.onnx  policy_blind_b2w.onnx  policy_blind_b2w.pt  pt_to_onnx.py
